package org.example;

public interface ElementoFactory {
    Elemento createElemento(int codigo, double precio);
}
